fixed asthetic spacing and adjusted css AGAIN

--- a/animal_shelter_start_point/public/style_adoption_owners.css
+++ b/animal_shelter_start_point/public/style_adoption_owners.css
@@ -18,6 +18,8 @@ body {
 }
 
 .link-container {
-  justify-content: space-evenly;
+  font-size: 25px;
+  display: flex;
+  justify-content: space-around;
   text-align: center;
 }
