--- a/animal_shelter_start_point/public/style_new.css
+++ b/animal_shelter_start_point/public/style_new.css
@@ -15,6 +15,8 @@ html {
   text-align: left;
   margin: 20px;
   padding: 20px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .link-container {
