--- a/animal_shelter_start_point/public/style_owners.css
+++ b/animal_shelter_start_point/public/style_owners.css
@@ -18,6 +18,10 @@ html {
 }
 
 .link-container {
-  justify-content: space-evenly;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 20px;
   text-align: center;
+  display: flex;
+  justify-content: space-around;
 }
